Decompiling Minecraft works on mac and hopefully other OS types